testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment3.errors.txt
a.js(9,12): error TS2304: Cannot find name 'Foo'.


==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {boolean} a
     * @property {boolean} b
     */
    
    const bar = { c: 1 };
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    export default bar;
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    